...
            )

            LaunchedEffect("navigation") {
                viewModel.refreshJoinedGroups()
            }

            JoinedGroupsView(
                viewModel
            )
        }

        composable(
            route = NavGraph.JoinedGroupDetails.route,
...
            )

            LaunchedEffect("navigation") {
                viewModel.refreshJoinedGroupDetails()
            }

            JoinedGroupDetailsView(viewModel)
        }

        composable(
            route = NavGraph.EditGroup.route,
            arguments = NavGraph.EditGroup.arguments!!
        ) {
...
            )

            LaunchedEffect("navigation") {
                viewModel.refreshGroups()
            }

            SearchGroupsView(viewModel)
        }

        composable(
            route = NavGraph.NonJoinedGroupDetails.route,
            arguments = NavGraph.NonJoinedGroupDetails.arguments!!
        ) {
...
