...
    var item by selectedItem

    MyApplicationTheme3 {
        NavigationBar_(containerColor = MaterialTheme.colorScheme.primary) {
            NavigationBarItem(
                modifier = Modifier.semantics {
                      contentDescription = "MyGroupsTab"
                },
                icon = {
                    Icon(
                        if (item == 0) Icons.Rounded.Group else Icons.Outlined.Group,
                        contentDescription = null,
                        tint = MaterialTheme.colorScheme.onPrimary
...
                onClick = {
                    clickLeft()
                }
            )
            NavigationBarItem(
                modifier = Modifier.semantics {
                    contentDescription = "SearchGroupsTab"
                },
                icon = {
                    Icon(
                        if (item == 1) Icons.Rounded.Groups else Icons.Outlined.Groups,
                        contentDescription = null,
                        tint = MaterialTheme.colorScheme.onPrimary
...
