...

                        Text(
                            "Nutzer Melden:",
                            modifier = Modifier.padding(top = 12.dp),
                            fontWeight = FontWeight.Bold
                        )
                        TextButton(modifier = Modifier.testTag("Nutzername melden"), onClick = {
                            if (nameButtonStyle.value == FontWeight.Normal) {
                                nameButtonStyle.value = FontWeight.Bold
                                reportFields.add(UserField.NAME)
                            } else {
                                nameButtonStyle.value = FontWeight.Normal
                                reportFields.remove(UserField.NAME)
...
                            }
                        }
                    }
                },
                confirmButton = {
                    TextButton(
                        modifier = Modifier.testTag("Bestätigen"),
                        onClick = {
                            if (reportFields.isNotEmpty()) report(reportFields)
                            reportFields.clear()
                            nameButtonStyle.value = FontWeight.Normal
                            contactButtonStyle.value = FontWeight.Normal

...
