...
                LazyColumn(
                    modifier = Modifier.padding(top = 6.dp),
                    verticalArrangement = Arrangement.spacedBy(6.dp)
                ) {
                    items(viewModel.groups.value.size) {
                        val group = viewModel.groups.value.get(it)
                        SearchGroupResult(
                            groupName = group.name,
                            lecture = group.lecture?.lectureName ?: "",
                            major = group.major?.name ?: "",
                            onClick = { viewModel.navToGroup(group) }
                        )
                    }
...
